jkind/src/jkind/lustre/parsing/LustreParser.java
// Generated from Lustre.g4 by ANTLR 4.4
package jkind.lustre.parsing;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LustreParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__56=1, T__55=2, T__54=3, T__53=4, T__52=5, T__51=6, T__50=7, T__49=8, 
		T__48=9, T__47=10, T__46=11, T__45=12, T__44=13, T__43=14, T__42=15, T__41=16, 
		T__40=17, T__39=18, T__38=19, T__37=20, T__36=21, T__35=22, T__34=23, 
		T__33=24, T__32=25, T__31=26, T__30=27, T__29=28, T__28=29, T__27=30, 
		T__26=31, T__25=32, T__24=33, T__23=34, T__22=35, T__21=36, T__20=37, 
		T__19=38, T__18=39, T__17=40, T__16=41, T__15=42, T__14=43, T__13=44, 
		T__12=45, T__11=46, T__10=47, T__9=48, T__8=49, T__7=50, T__6=51, T__5=52, 
		T__4=53, T__3=54, T__2=55, T__1=56, T__0=57, REAL=58, BOOL=59, INT=60, 
		ID=61, WS=62, SL_COMMENT=63, ML_COMMENT=64, ERROR=65;
	public static final String[] tokenNames = {
		"<INVALID>", "'{'", "'='", "'--@contract'", "'int'", "'('", "','", "'var'", 
		"'const'", "'--@ensure'", "'mod'", "'>='", "'<'", "'pre'", "'assert'", 
		"']'", "'node'", "'type'", "'<>'", "'let'", "'returns'", "'tel'", "'floor'", 
		"'--%SUPPORT'", "'then'", "'+'", "'struct'", "'/'", "'of'", "'--%REALIZABLE'", 
		"';'", "'--%PROPERTY'", "'}'", "'if'", "':='", "'enum'", "'<='", "'--%MAIN'", 
		"'condact'", "'*'", "'--@require'", "'.'", "'->'", "':'", "'['", "'>'", 
		"'bool'", "'xor'", "'or'", "'subrange'", "'=>'", "'div'", "'else'", "')'", 
		"'and'", "'not'", "'-'", "'real'", "REAL", "BOOL", "INT", "ID", "WS", 
		"SL_COMMENT", "ML_COMMENT", "ERROR"
	};
	public static final int
		RULE_program = 0, RULE_typedef = 1, RULE_constant = 2, RULE_node = 3, 
		RULE_varDeclList = 4, RULE_varDeclGroup = 5, RULE_topLevelType = 6, RULE_type = 7, 
		RULE_bound = 8, RULE_property = 9, RULE_contract = 10, RULE_contract_id = 11, 
		RULE_ensure = 12, RULE_require = 13, RULE_realizabilityInputs = 14, RULE_support = 15, 
		RULE_main = 16, RULE_assertion = 17, RULE_equation = 18, RULE_lhs = 19, 
		RULE_expr = 20, RULE_eID = 21;
	public static final String[] ruleNames = {
		"program", "typedef", "constant", "node", "varDeclList", "varDeclGroup", 
		"topLevelType", "type", "bound", "property", "contract", "contract_id", 
		"ensure", "require", "realizabilityInputs", "support", "main", "assertion", 
		"equation", "lhs", "expr", "eID"
	};

	@Override
	public String getGrammarFileName() { return "Lustre.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LustreParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TypedefContext typedef(int i) {
			return getRuleContext(TypedefContext.class,i);
		}
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public TerminalNode EOF() { return getToken(LustreParser.EOF, 0); }
		public List<TypedefContext> typedef() {
			return getRuleContexts(TypedefContext.class);
		}
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public NodeContext node(int i) {
			return getRuleContext(NodeContext.class,i);
		}
		public List<NodeContext> node() {
			return getRuleContexts(NodeContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__49) | (1L << T__41) | (1L << T__40))) != 0)) {
				{
				setState(47);
				switch (_input.LA(1)) {
				case T__40:
					{
					setState(44); typedef();
					}
					break;
				case T__49:
					{
					setState(45); constant();
					}
					break;
				case T__41:
					{
					setState(46); node();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(52); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedefContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public TopLevelTypeContext topLevelType() {
			return getRuleContext(TopLevelTypeContext.class,0);
		}
		public TypedefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitTypedef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypedefContext typedef() throws RecognitionException {
		TypedefContext _localctx = new TypedefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_typedef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54); match(T__40);
			setState(55); match(ID);
			setState(56); match(T__55);
			setState(57); topLevelType();
			setState(58); match(T__27);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); match(T__49);
			setState(61); match(ID);
			setState(64);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(62); match(T__14);
				setState(63); type(0);
				}
			}

			setState(66); match(T__55);
			setState(67); expr(0);
			setState(68); match(T__27);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeContext extends ParserRuleContext {
		public VarDeclListContext input;
		public VarDeclListContext output;
		public VarDeclListContext local;
		public AssertionContext assertion(int i) {
			return getRuleContext(AssertionContext.class,i);
		}
		public RealizabilityInputsContext realizabilityInputs(int i) {
			return getRuleContext(RealizabilityInputsContext.class,i);
		}
		public List<VarDeclListContext> varDeclList() {
			return getRuleContexts(VarDeclListContext.class);
		}
		public SupportContext support(int i) {
			return getRuleContext(SupportContext.class,i);
		}
		public List<RealizabilityInputsContext> realizabilityInputs() {
			return getRuleContexts(RealizabilityInputsContext.class);
		}
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public List<EquationContext> equation() {
			return getRuleContexts(EquationContext.class);
		}
		public EquationContext equation(int i) {
			return getRuleContext(EquationContext.class,i);
		}
		public List<MainContext> main() {
			return getRuleContexts(MainContext.class);
		}
		public List<SupportContext> support() {
			return getRuleContexts(SupportContext.class);
		}
		public VarDeclListContext varDeclList(int i) {
			return getRuleContext(VarDeclListContext.class,i);
		}
		public List<AssertionContext> assertion() {
			return getRuleContexts(AssertionContext.class);
		}
		public MainContext main(int i) {
			return getRuleContext(MainContext.class,i);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_node);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); match(T__41);
			setState(71); match(ID);
			setState(72); match(T__52);
			setState(74);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(73); ((NodeContext)_localctx).input = varDeclList();
				}
			}

			setState(76); match(T__4);
			setState(77); match(T__37);
			setState(78); match(T__52);
			setState(80);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(79); ((NodeContext)_localctx).output = varDeclList();
				}
			}

			setState(82); match(T__4);
			setState(83); match(T__27);
			setState(88);
			_la = _input.LA(1);
			if (_la==T__50) {
				{
				setState(84); match(T__50);
				setState(85); ((NodeContext)_localctx).local = varDeclList();
				setState(86); match(T__27);
				}
			}

			setState(90); match(T__38);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__52) | (1L << T__43) | (1L << T__34) | (1L << T__28) | (1L << T__26) | (1L << T__20) | (1L << ID))) != 0)) {
				{
				setState(97);
				switch (_input.LA(1)) {
				case T__52:
				case ID:
					{
					setState(91); equation();
					}
					break;
				case T__26:
					{
					setState(92); property();
					}
					break;
				case T__43:
					{
					setState(93); assertion();
					}
					break;
				case T__20:
					{
					setState(94); main();
					}
					break;
				case T__28:
					{
					setState(95); realizabilityInputs();
					}
					break;
				case T__34:
					{
					setState(96); support();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102); match(T__36);
			setState(104);
			_la = _input.LA(1);
			if (_la==T__27) {
				{
				setState(103); match(T__27);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclListContext extends ParserRuleContext {
		public VarDeclGroupContext varDeclGroup(int i) {
			return getRuleContext(VarDeclGroupContext.class,i);
		}
		public List<VarDeclGroupContext> varDeclGroup() {
			return getRuleContexts(VarDeclGroupContext.class);
		}
		public VarDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitVarDeclList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclListContext varDeclList() throws RecognitionException {
		VarDeclListContext _localctx = new VarDeclListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDeclList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106); varDeclGroup();
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(107); match(T__27);
					setState(108); varDeclGroup();
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclGroupContext extends ParserRuleContext {
		public List<EIDContext> eID() {
			return getRuleContexts(EIDContext.class);
		}
		public EIDContext eID(int i) {
			return getRuleContext(EIDContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarDeclGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclGroup; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitVarDeclGroup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclGroupContext varDeclGroup() throws RecognitionException {
		VarDeclGroupContext _localctx = new VarDeclGroupContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDeclGroup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); eID(0);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__51) {
				{
				{
				setState(115); match(T__51);
				setState(116); eID(0);
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122); match(T__14);
			setState(123); type(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelTypeContext extends ParserRuleContext {
		public TopLevelTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelType; }
	 
		public TopLevelTypeContext() { }
		public void copyFrom(TopLevelTypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RecordTypeContext extends TopLevelTypeContext {
		public List<TerminalNode> ID() { return getTokens(LustreParser.ID); }
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode ID(int i) {
			return getToken(LustreParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public RecordTypeContext(TopLevelTypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitRecordType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EnumTypeContext extends TopLevelTypeContext {
		public List<TerminalNode> ID() { return getTokens(LustreParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LustreParser.ID, i);
		}
		public EnumTypeContext(TopLevelTypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitEnumType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PlainTypeContext extends TopLevelTypeContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public PlainTypeContext(TopLevelTypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitPlainType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelTypeContext topLevelType() throws RecognitionException {
		TopLevelTypeContext _localctx = new TopLevelTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_topLevelType);
		int _la;
		try {
			setState(154);
			switch (_input.LA(1)) {
			case T__53:
			case T__11:
			case T__8:
			case T__0:
			case ID:
				_localctx = new PlainTypeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(125); type(0);
				}
				break;
			case T__31:
				_localctx = new RecordTypeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(126); match(T__31);
				setState(127); match(T__56);
				{
				setState(128); match(ID);
				setState(129); match(T__14);
				setState(130); type(0);
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__27) {
					{
					{
					setState(132); match(T__27);
					setState(133); match(ID);
					setState(134); match(T__14);
					setState(135); type(0);
					}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(141); match(T__25);
				}
				break;
			case T__22:
				_localctx = new EnumTypeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(143); match(T__22);
				setState(144); match(T__56);
				setState(145); match(ID);
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__51) {
					{
					{
					setState(146); match(T__51);
					setState(147); match(ID);
					}
					}
					setState(152);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(153); match(T__25);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArrayTypeContext extends TypeContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode INT() { return getToken(LustreParser.INT, 0); }
		public ArrayTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitArrayType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RealTypeContext extends TypeContext {
		public RealTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitRealType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SubrangeTypeContext extends TypeContext {
		public BoundContext bound(int i) {
			return getRuleContext(BoundContext.class,i);
		}
		public List<BoundContext> bound() {
			return getRuleContexts(BoundContext.class);
		}
		public SubrangeTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitSubrangeType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntTypeContext extends TypeContext {
		public IntTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitIntType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UserTypeContext extends TypeContext {
		public TerminalNode ID() { return getToken(LustreParser.ID, 0); }
		public UserTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitUserType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BoolTypeContext extends TypeContext {
		public BoolTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitBoolType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_type, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			switch (_input.LA(1)) {
			case T__53:
				{
				_localctx = new IntTypeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(157); match(T__53);
				}
				break;
			case T__8:
				{
				_localctx = new SubrangeTypeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(158); match(T__8);
				setState(159); match(T__13);
				setState(160); bound();
				setState(161); match(T__51);
				setState(162); bound();
				setState(163); match(T__42);
				setState(164); match(T__29);
				setState(165); match(T__53);
				}
				break;
			case T__11:
				{
				_localctx = new BoolTypeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(167); match(T__11);
				}
				break;
			case T__0:
				{
				_localctx = new RealTypeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(168); match(T__0);
				}
				break;
			case ID:
				{
				_localctx = new UserTypeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(169); match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(178);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ArrayTypeContext(new TypeContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_type);
					setState(172);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(173); match(T__13);
					setState(174); match(INT);
					setState(175); match(T__42);
					}
					} 
				}
				setState(180);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class BoundContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(LustreParser.INT, 0); }
		public BoundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bound; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitBound(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoundContext bound() throws RecognitionException {
		BoundContext _localctx = new BoundContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bound);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(181); match(T__1);
				}
			}

			setState(184); match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyContext extends ParserRuleContext {
		public EIDContext eID() {
			return getRuleContext(EIDContext.class,0);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_property);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186); match(T__26);
			setState(187); eID(0);
			setState(188); match(T__27);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContractContext extends ParserRuleContext {
		public Contract_idContext contract_id() {
			return getRuleContext(Contract_idContext.class,0);
		}
		public List<RequireContext> require() {
			return getRuleContexts(RequireContext.class);
		}
		public List<EnsureContext> ensure() {
			return getRuleContexts(EnsureContext.class);
		}
		public RequireContext require(int i) {
			return getRuleContext(RequireContext.class,i);
		}
		public EnsureContext ensure(int i) {
			return getRuleContext(EnsureContext.class,i);
		}
		public ContractContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contract; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LustreVisitor ) return ((LustreVisitor<? extends T>)visitor).visitContract(this);
			else return visitor.visitChildren(this);
		}
	}
